--- a/luciopoveda.css
+++ b/luciopoveda.css
@@ -1,101 +1,166 @@
-body{
-  padding:60px 100px;
-  margin:0;
-  color:#888;
+body {
+  padding: 60px 100px;
+  margin: 0;
+  color: #888;
   background-color: #222;
   background-repeat: repeat;
   -webkit-background-size: 3px 3px;
   background-size: 3px 3px;
   background-position: top left;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-transition: font-size .5s ease;
   -moz-transition: font-size .5s ease;
   transition: font-size .5s ease;
-  min-width:300px;
+  min-width: 300px;
 }
-a{ text-decoration: none; }
-h1{
-  font-family: 'Raleway', sans-serif;
-  font-size:90px;
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  font-family: 'Lato', sans-serif;
+  font-size: 90px;
   text-align: right;
-  color:#eee;
+  color: #eee;
   line-height: 120%;
-  margin:0;
+  margin: 0;
 }
-h2{
-  font-family: 'Raleway', sans-serif;
-  font-size:70px;
+
+h2 {
+  font-family: 'Lato', sans-serif;
+  font-size: 70px;
   text-align: right;
-  color:#777;
+  color: #777;
   line-height: 110%;
-  margin:0;
+  margin: 0;
 }
-h2 a, h2 a:active, h2 a:visited{
-  color:#60ccf3;
+
+h2 a, h2 a:active, h2 a:visited {
+  color: #60ccf3;
   vertical-align: middle;
   margin-left: 20px;
 }
+
 h2 a:hover {
-  color:#1eafe4;}
-
-p a, p a:active, p a:visited{
-  color:#FC0;
+  color: #1eafe4;
 }
-p a:hover {
-  color:#1eafe4;}
 
-div,footer{
-  display:block;
+p a, p a:active, p a:visited {
+  color: #FC0;
+}
+
+p a:hover {
+  color: #1eafe4;
+}
+
+div, footer {
+  display: block;
   text-align: right;
 }
-footer a:hover{
+
+footer a:hover {
   text-decoration: underline;
 }
-p{
+
+p {
   display: inline-block;
   text-align: right;
-  width:500px;
+  width: 500px;
   font-size: 20px;
   line-height: 140%;
-  margin-top:40px;
+  margin-top: 40px;
 }
-ul{
+
+ul {
   display: inline-block;
   list-style: none;
-  margin-top:40px;
-  padding:0;
+  margin-top: 40px;
+  padding: 0;
   font-size: 20px;
 }
-li{
+
+li {
   display: inline-block;
-  margin-left:10px;
+  margin-left: 10px;
 }
 
-li a, li a:active, li a:visited{color:#888;}
-li a:hover{color:#fff;}
+li a, li a:active, li a:visited {
+  color: #888;
+}
 
+li a:hover {
+  color: #fff;
+}
 
-@media (max-width: 1000px){
-  h1{ font-size: 70px;}
-  h2{ font-size: 60px;}
-  p,ul{font-size: 18px; }
+@media (max-width: 1000px) {
+  h1 {
+    font-size: 70px;
+  }
+
+  h2 {
+    font-size: 60px;
+  }
+
+  p, ul {
+    font-size: 18px;
+  }
 }
-@media (max-width: 900px){
-  h1{ font-size: 50px;}
-  h2{ font-size: 40px;}
-  p,ul a{font-size: 16px; }
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 50px;
+  }
+
+  h2 {
+    font-size: 40px;
+  }
+
+  p, ul a {
+    font-size: 16px;
+  }
 }
-@media (max-width: 700px){
-  body{padding: 30px 50px;}
-  h1{ font-size: 50px;}
-  h3{ font-size: 40px;}
-  p {width: auto}
-  p,ul a{font-size: 16px;}
+
+@media (max-width: 700px) {
+  body {
+    padding: 30px 50px;
+  }
+
+  h1 {
+    font-size: 50px;
+  }
+
+  h3 {
+    font-size: 40px;
+  }
+
+  p {
+    width: auto
+  }
+
+  p, ul a {
+    font-size: 16px;
+  }
 }
-@media (max-width: 550px){
-  body{padding: 10px; }
-  h1{ font-size: 34px; }
-  h2{ font-size: 28px; }
-  p{ width:auto; }
-  p,ul a{font-size: 16px; }
+
+@media (max-width: 550px) {
+  body {
+    padding: 10px;
+  }
+
+  h1 {
+    font-size: 34px;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  p {
+    width: auto;
+  }
+
+  p, ul a {
+    font-size: 16px;
+  }
 }
