--- a/luciopoveda.css
+++ b/luciopoveda.css
@@ -18,22 +18,22 @@ a {
   text-decoration: none;
 }
 
-h1 {
+h1, h2 {
+  color: #FFFFFF;
   font-family: 'Lato', sans-serif;
-  font-size: 90px;
-  text-align: right;
-  color: #eee;
-  line-height: 120%;
+  font-weight: lighter;
   margin: 0;
+  text-align: right;
+}
+
+h1 {
+  font-size: 90px;
+  line-height: 120%;
 }
 
 h2 {
-  font-family: 'Lato', sans-serif;
   font-size: 70px;
-  text-align: right;
-  color: #FFFFFF;
   line-height: 110%;
-  margin: 0;
 }
 
 h2 a, h2 a:active, h2 a:visited {
