--- a/luciopoveda.scss
+++ b/luciopoveda.scss
@@ -104,58 +104,28 @@ a {
 
 }
 
-@keyframes glitch-anim-text {
+.glitch {
+    animation-name: text-glitch;
+    animation-duration: 300ms;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+}
+
+@keyframes text-glitch {
     0% {
-        -webkit-transform: translate3d(calc(-1 * 20px), 0, 0) scale3d(-1, -1, 1);
-        transform: translate3d(calc(-1 * 20px), 0, 0) scale3d(-1, -1, 1);
-        -webkit-clip-path: polygon(0 20%, 100% 20%, 100% 21%, 0 21%);
-        clip-path: polygon(0 20%, 100% 20%, 100% 21%, 0 21%)
+        clip-path: polygon(0% 70%, 0% 100%, 100% 100%, 100% 70%);
+        transform: translateX(-15px);
     }
+    40% {
 
-    2% {
-        -webkit-clip-path: polygon(0 33%, 100% 33%, 100% 33%, 0 33%);
-        clip-path: polygon(0 33%, 100% 33%, 100% 33%, 0 33%)
     }
+    60% {
 
-    4% {
-        -webkit-clip-path: polygon(0 44%, 100% 44%, 100% 44%, 0 44%);
-        clip-path: polygon(0 44%, 100% 44%, 100% 44%, 0 44%)
     }
+    80% {
 
-    5% {
-        -webkit-clip-path: polygon(0 50%, 100% 50%, 100% 20%, 0 20%);
-        clip-path: polygon(0 50%, 100% 50%, 100% 20%, 0 20%)
     }
-
-    6% {
-        -webkit-clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%);
-        clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%)
-    }
-
-    7% {
-        -webkit-clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
-        clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%)
-    }
-
-    8% {
-        -webkit-clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%);
-        clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%)
-    }
-
-    9% {
-        -webkit-clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
-        clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%)
-    }
-
-    9.9% {
-        -webkit-transform: translate3d(calc(-1 * 20px), 0, 0) scale3d(-1, -1, 1);
-        transform: translate3d(calc(-1 * 20px), 0, 0) scale3d(-1, -1, 1)
-    }
-
-    10%, 100% {
-        -webkit-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
-        transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%)
+    to {
+        transform: translate(0)
     }
 }
